:meat_on_bone: turning overflow scrolling off to prevent the settings control to scroll...

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -298,7 +298,7 @@ a {
   font-size: $basefont;
   height: calc(100% - 2rem);
   left: 0;
-  overflow: scroll;
+  //overflow: scroll;
   position: fixed;
   top: 3rem;
   width: 100%;
